[Func] Support ass subtitle file

--- a/gst/subparse/meson.build
+++ b/gst/subparse/meson.build
@@ -1,4 +1,5 @@
 subparse_sources = [
+  'gstzsassparse.c',
   'gstssaparse.c',
   'gstsubparse.c',
   'samiparse.c',
@@ -7,11 +8,12 @@ subparse_sources = [
   'qttextparse.c',
 ]
 
+libass_dep = dependency('libass', version: '>= 0.14.0')
 gstsubparse = library('gstsubparse',
   subparse_sources,
   c_args : gst_plugins_base_args,
   include_directories: [configinc, libsinc],
-  dependencies : [gst_base_dep],
+  dependencies : [gst_base_dep, libass_dep],
   install : true,
   install_dir : plugins_install_dir,
 )
